--- a/gb/21/9/19/n13245150.md
+++ b/gb/21/9/19/n13245150.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jtmmat3416/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jtmmat3416/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jtmmat3416/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jtmmat3416/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>移民署“数字油画DIY” 人人都是小画家</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245152-517783-600x400.jpg" />
 <h6>移民署多元文化宣导活动。（移民署提供）
 </h6>
 <hr>
-<p>【大纪元2021年09月19日讯】（大纪元记者陈秀媛台湾基隆报导）为让<ahref="https://github.com/jtmmat3416/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>家庭与社区民众认识多元文化，<ahref="https://github.com/jtmmat3416/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>北区事务大队基隆市服务站与<ahref="https://github.com/jtmmat3416/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>据点基隆市八方缘妇幼协会合作，特地利用<ahref="https://github.com/jtmmat3416/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>前夕，9月18日早上于新丰里办公室共同办理多元文化宣导活动，广邀社区新住民及眷属，参与中秋节“DIY彩绘艺术数字油画”，按照数字涂上相对应颜料，让大人、小孩都有机会体验当画家的满足感。</p>
-<p>本次<ahref="https://github.com/jtmmat3416/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>多元文化活动，邀请基隆市新丰爱乡协会拥有彩绘师资格的童秀珠老师指导新住民及小朋友彩绘数字油画，DIY过程中让艺术走进了我们的生活，不仅能够让人轻松上手，享受挥洒乐趣，还能恢复心灵的平静。</p>
+<p>【大纪元2021年09月19日讯】（大纪元记者陈秀媛台湾基隆报导）为让<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>家庭与社区民众认识多元文化，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>北区事务大队基隆市服务站与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>据点基隆市八方缘妇幼协会合作，特地利用<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>前夕，9月18日早上于新丰里办公室共同办理多元文化宣导活动，广邀社区新住民及眷属，参与中秋节“DIY彩绘艺术数字油画”，按照数字涂上相对应颜料，让大人、小孩都有机会体验当画家的满足感。</p>
+<p>本次<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>多元文化活动，邀请基隆市新丰爱乡协会拥有彩绘师资格的童秀珠老师指导新住民及小朋友彩绘数字油画，DIY过程中让艺术走进了我们的生活，不仅能够让人轻松上手，享受挥洒乐趣，还能恢复心灵的平静。</p>
 <figure id="attachment_13245153" aria-describedby="caption-attachment-13245153" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13245153-517784-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13245153" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245153-517784-450x338.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-13245153" class="wp-caption-text">新住民彩绘数字油画。（移民署提供）</figcaption></figure>
-<p>来自越南的新住民阮氏翠，嫁来台湾已17年，她分享家乡也有类似台湾<ahref="https://github.com/jtmmat3416/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>的节日-越南望月节，有提灯笼的传统，该节日除了是团聚的节日外，也是儿童节，每当望月节时，小孩欢欣雀跃的提着灯笼出去，夜晚一片灯光闪烁，相当热闹，今天还学习到台湾中秋节的由来及习俗，了解多元且不同的文化特色。</p>
+<p>来自越南的新住民阮氏翠，嫁来台湾已17年，她分享家乡也有类似台湾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>的节日-越南望月节，有提灯笼的传统，该节日除了是团聚的节日外，也是儿童节，每当望月节时，小孩欢欣雀跃的提着灯笼出去，夜晚一片灯光闪烁，相当热闹，今天还学习到台湾中秋节的由来及习俗，了解多元且不同的文化特色。</p>
 <p>为弭平新住民数位之落差，创造数位学习成长，移民署持续办理保障新住民寛频上网计划，特别派专人到活动现场，提供新住民免费借用笔电或平板服务，申办成功还立即赠送精美礼品，姊妹们直呼好贴心。</p>
 <p>基隆市服务站主任毛兆莉表示，移民署与基隆市新住民据点八方缘妇幼协会共同合作办理社区多元文化活动，希望新住民能一起体验台湾及异国文化的不同，另外近期即将发放振兴经济五倍券，包含持有有效居留证之外籍(含大陆、港澳)配偶或持有永久居留证的外国人皆可领取。</p>
 <p>责任编辑：郑桦</p>
@@ -18,41 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13221130.md#1">劳动节长周末11名温哥华警官遇袭受伤</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220674.md#1">周末市中心拍电视剧  Burrard桥将锁路</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220614.md#1">快餐厅美食广场就餐无需出示疫苗卡</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220595.md#1">9月8日：新增814宗确诊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679159.md#1">环游世界玩数学来台东 带学生体验数学奥妙</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678938.md#1">翘班喝酒造成破口　基市警局：痛心、究责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678492.md#1">基隆增10例 林右昌：加设三个筛检站</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678288.md#1">台东28日新增2确诊 关山池上加开快筛站</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677756.md#1">海大也传老师确诊 学校紧急停课</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676521.md#1">凉亭被震垮 1柱仅1钢筋 花检查偷工减料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676237.md#1">增18+1案例 林右昌：有疑虑民众踊跃筛检</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676181.md#1">再新增4名确诊 基市警局要求所有同仁快筛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676040.md#1">台东出现6确诊 县府紧急启动初鹿快筛站</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675527.md#1">各分局侦查队皆沦陷 基隆市警局：警力支援</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220267.md#1">【有冇搞错】阿富汗自古就产恐怖主义</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/9/n13220621.md#1">移美港人：目睹香港法治崩坏 不适合小孩成长</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219236.md#1">台网红486账号遭停权 脸书回应：涉及仇恨言论</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220155.md#1">黄秋生自曝已抵台隔离 三个字评铁皮屋获大赞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/19/n13245150.htm">移民署“数字油画DIY” 人人都是小画家</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/19/n13245150.htm">移民署“数字油画DIY” 人人都是小画家</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13245150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jtmmat3416/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jtmmat3416/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jtmmat3416/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtmmat3416/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/9/19/n13245150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
